// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`drills i18n — render snapshots > en: render-snapshot DrillInstructions + DrillTypeCard для всех 7 типов 1`] = `
<div
  data-testid="drills-i18n-fixture"
>
  <h2>
    Tactical drills
  </h2>
  <p>
    Pick a drill
  </p>
  <p>
    Short pattern-recognition exercises. One position — one question.
  </p>
  <section
    data-drill-id="findHangingPiece"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Capture the undefended enemy piece
    </div>
    <button
      aria-label="Hanging piece. Find an undefended enemy piece and capture it in one move."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Hanging piece
      </span>
      <span
        class="drill-type-card__desc"
      >
        Find an undefended enemy piece and capture it in one move.
      </span>
    </button>
  </section>
  <section
    data-drill-id="findLoosePiece"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Which piece is undefended?
    </div>
    <button
      aria-label="Loose piece. Find a piece on the board with no defenders."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Loose piece
      </span>
      <span
        class="drill-type-card__desc"
      >
        Find a piece on the board with no defenders.
      </span>
    </button>
  </section>
  <section
    data-drill-id="findPin"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Find the pinned piece
    </div>
    <button
      aria-label="Pin. Locate the piece pinned against a more valuable one (or the king)."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Pin
      </span>
      <span
        class="drill-type-card__desc"
      >
        Locate the piece pinned against a more valuable one (or the king).
      </span>
    </button>
  </section>
  <section
    data-drill-id="findFork"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Which move creates a new fork (simultaneous attack on two valuable pieces) for the opponent?
    </div>
    <button
      aria-label="Create a fork. Find a move after which your piece simultaneously attacks two valuable opponent pieces (knight, bishop, rook, queen, king). Such an attack is called a fork."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Create a fork
      </span>
      <span
        class="drill-type-card__desc"
      >
        Find a move after which your piece simultaneously attacks two valuable opponent pieces (knight, bishop, rook, queen, king). Such an attack is called a fork.
      </span>
    </button>
  </section>
  <section
    data-drill-id="countAttackers"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      How many pieces attack the highlighted square?
    </div>
    <button
      aria-label="Count attackers. Count how many pieces attack the marked square."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Count attackers
      </span>
      <span
        class="drill-type-card__desc"
      >
        Count how many pieces attack the marked square.
      </span>
    </button>
  </section>
  <section
    data-drill-id="findAllChecks"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Make every check
    </div>
    <button
      aria-label="All checks. Mark every square where you can deliver a check."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        All checks
      </span>
      <span
        class="drill-type-card__desc"
      >
        Mark every square where you can deliver a check.
      </span>
    </button>
  </section>
  <section
    data-drill-id="findUndefendedAttack"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Which move creates a new hanging piece (attacked and undefended) for the opponent?
    </div>
    <button
      aria-label="Create a hanging piece. Find a move after which the opponent has a piece that is attacked by your piece and has no defenders — and your attacking piece itself stays safe."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Create a hanging piece
      </span>
      <span
        class="drill-type-card__desc"
      >
        Find a move after which the opponent has a piece that is attacked by your piece and has no defenders — and your attacking piece itself stays safe.
      </span>
    </button>
  </section>
</div>
`;

exports[`drills i18n — render snapshots > en: snapshot UX-копи (buttons/feedback/errors/lobby/side) 1`] = `
{
  "buttons": {
    "back": "Back",
    "backToLobby": "Back to drills",
    "forward": "Forward",
    "next": "Next drill",
    "showSolution": "Show solution",
    "skip": "Skip",
    "submit": "Submit",
    "tryAgain": "Try again",
  },
  "errors": {
    "loadFailed": "Could not load drill. Please try again.",
    "noDrillsAvailable": "No drills available for this type yet.",
    "submitFailed": "Could not submit answer. Check your connection.",
  },
  "feedback": {
    "correct": "Correct!",
    "incorrect": "Not quite",
    "partiallyCorrect": "Almost — {{matched}} of {{total}} squares",
    "solutionLabel": "Solution",
    "tryAgainHint": "Look at the position once more before the next try.",
  },
  "lobby": {
    "completedBadge": "Solved",
    "lockedHint": "Solve the previous drill type to unlock.",
    "newBadge": "New",
    "sprintCtaButton": "Start sprint",
    "sprintCtaDescription": "Mixed drills against the clock. Race yourself and others.",
    "sprintCtaTitle": "Sprint",
    "sprintLeaderboardCtaButton": "Open leaderboard",
    "sprintLeaderboardCtaDescription": "Top sprint results.",
    "sprintLeaderboardCtaTitle": "Leaderboard",
  },
  "side": {
    "blackAttackers": "Black attackers",
    "blackDefenders": "Black defenders",
    "blackToMove": "Black to move",
    "whiteAttackers": "White attackers",
    "whiteDefenders": "White defenders",
    "whiteToMove": "White to move",
  },
}
`;

exports[`drills i18n — render snapshots > en: snapshot drills.explanation + chess.pieces 1`] = `
{
  "chessPieces": {
    "b": "bishop",
    "k": "king",
    "n": "knight",
    "p": "pawn",
    "q": "queen",
    "r": "rook",
  },
  "explanation": {
    "common": {
      "correctAnswer": "Correct answer: {{answer}}",
      "next": "Next",
      "title": "Review",
      "yourAnswer": "Your answer: {{answer}}",
    },
    "countAttackers": {
      "correct_one": "{{count}} piece attacks {{square}}.",
      "correct_other": "{{count}} pieces attack {{square}}.",
      "list": "Attackers: {{pieces}}.",
      "userAnswer": "Your answer: {{userCount}}.",
    },
    "countDefenders": {
      "correct_one": "{{count}} piece defends {{square}}.",
      "correct_other": "{{count}} pieces defend {{square}}.",
      "list": "Defenders: {{pieces}}.",
      "userAnswer": "Your answer: {{userCount}}.",
    },
    "findAllChecks": {
      "correct_one": "{{count}} move gives check: {{moves}}.",
      "correct_other": "{{count}} moves give check: {{moves}}.",
      "missed": "Missed: {{moves}}.",
      "summaryGroup": "Direct: {{direct}}; discovered: {{discovered}}; double: {{double}}.",
      "tagDirect": "{{from}}{{to}} — direct check.",
      "tagDiscovered": "{{from}}{{to}} — discovered check.",
      "tagDouble": "{{from}}{{to}} — double check.",
      "wrong": "{{moves}} — not a check.",
    },
    "findFork": {
      "correct": "{{piece}} via {{move}} forks {{targets}}.",
      "correctWithCheck": "{{piece}} via {{move}} forks the king ({{king}}) and {{targets}}.",
      "wrong": "{{from}}{{to}} doesn't create a fork.",
    },
    "findHangingPiece": {
      "correct": "{{piece}} on {{square}} is hanging: attacked by {{attackers}}, defended by {{defenders}}.",
      "correctUndefended": "{{piece}} on {{square}} is hanging: attacked by {{attackers}}, no defenders.",
      "wrong": "Your move {{from}}{{to}} doesn't capture the hanging piece.",
    },
    "findLoosePiece": {
      "correct": "{{piece}} on {{square}} is not defended by any friendly piece.",
      "wrong": "Piece on {{square}} is defended by: {{defenders}}.",
    },
    "findPin": {
      "correctAbsolute": "{{attacker}} ({{fromSquare}}) creates an absolute pin: {{pinned}} ({{pinnedSquare}}) is pinned to the king.",
      "correctRelative": "{{attacker}} ({{fromSquare}}) pins {{pinned}} ({{pinnedSquare}}) to the more valuable {{anchor}} ({{anchorSquare}}).",
      "wrong": "{{square}} is not pinned.",
    },
    "findUndefendedAttack": {
      "correct": "{{move}}: attacks {{piece}} ({{square}}), no defenders.",
      "correctFreeWin": "{{move}}: wins {{piece}} ({{square}}) without trade.",
      "correctMulti": "{{move}}: creates {{count}} hanging pieces — {{squares}}.",
      "wrong": "{{from}}{{to}} doesn't create a new threat.",
    },
  },
}
`;

exports[`drills i18n — render snapshots > ru: render-snapshot DrillInstructions + DrillTypeCard для всех 7 типов 1`] = `
<div
  data-testid="drills-i18n-fixture"
>
  <h2>
    Тактические упражнения
  </h2>
  <p>
    Выберите упражнение
  </p>
  <p>
    Короткие упражнения на распознавание паттернов. Одна позиция — один вопрос.
  </p>
  <section
    data-drill-id="findHangingPiece"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Возьмите незащищённую фигуру противника
    </div>
    <button
      aria-label="Висящая фигура. Найдите фигуру противника без защитников и заберите её одним ходом."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Висящая фигура
      </span>
      <span
        class="drill-type-card__desc"
      >
        Найдите фигуру противника без защитников и заберите её одним ходом.
      </span>
    </button>
  </section>
  <section
    data-drill-id="findLoosePiece"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Какая фигура без защиты?
    </div>
    <button
      aria-label="Незащищённая фигура. Найдите на доске фигуру без единого защитника."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Незащищённая фигура
      </span>
      <span
        class="drill-type-card__desc"
      >
        Найдите на доске фигуру без единого защитника.
      </span>
    </button>
  </section>
  <section
    data-drill-id="findPin"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Найдите связанную фигуру
    </div>
    <button
      aria-label="Связка. Определите связанную фигуру — ту, за которой стоит фигура большей ценности (или король)."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Связка
      </span>
      <span
        class="drill-type-card__desc"
      >
        Определите связанную фигуру — ту, за которой стоит фигура большей ценности (или король).
      </span>
    </button>
  </section>
  <section
    data-drill-id="findFork"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Какой ход создаёт у соперника новую вилку (одновременную атаку на две ценные фигуры)?
    </div>
    <button
      aria-label="Создать вилку. Найдите ход, после которого ваша фигура одновременно нападает на две ценные фигуры соперника (конь, слон, ладья, ферзь, король). Такая атака называется вилкой."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Создать вилку
      </span>
      <span
        class="drill-type-card__desc"
      >
        Найдите ход, после которого ваша фигура одновременно нападает на две ценные фигуры соперника (конь, слон, ладья, ферзь, король). Такая атака называется вилкой.
      </span>
    </button>
  </section>
  <section
    data-drill-id="countAttackers"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Сколько фигур атакуют выделенную клетку?
    </div>
    <button
      aria-label="Счёт атакующих. Подсчитайте, сколько фигур атакуют выделенную клетку."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Счёт атакующих
      </span>
      <span
        class="drill-type-card__desc"
      >
        Подсчитайте, сколько фигур атакуют выделенную клетку.
      </span>
    </button>
  </section>
  <section
    data-drill-id="findAllChecks"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Сделайте все ходы с шахом
    </div>
    <button
      aria-label="Все шахи. Отметьте все клетки, с которых можно дать шах."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Все шахи
      </span>
      <span
        class="drill-type-card__desc"
      >
        Отметьте все клетки, с которых можно дать шах.
      </span>
    </button>
  </section>
  <section
    data-drill-id="findUndefendedAttack"
  >
    <div
      class="drill-instructions drill-instructions--info"
      data-testid="drill-instructions"
      data-tone="info"
      role="status"
    >
      Какой ход создаёт у соперника новую висящую фигуру (под боем и без защиты)?
    </div>
    <button
      aria-label="Создать висящую фигуру. Найдите ход, после которого у соперника появится фигура, атакованная вашей и без защитников — и при этом ваша атакующая фигура сама не подставится под удар."
      class="drill-type-card"
      data-disabled="false"
      data-testid="drill-type-card"
      type="button"
    >
      <span
        class="drill-type-card__title"
      >
        Создать висящую фигуру
      </span>
      <span
        class="drill-type-card__desc"
      >
        Найдите ход, после которого у соперника появится фигура, атакованная вашей и без защитников — и при этом ваша атакующая фигура сама не подставится под удар.
      </span>
    </button>
  </section>
</div>
`;

exports[`drills i18n — render snapshots > ru: snapshot UX-копи (buttons/feedback/errors/lobby/side) 1`] = `
{
  "buttons": {
    "back": "Назад",
    "backToLobby": "К списку упражнений",
    "forward": "Вперёд",
    "next": "Следующее",
    "showSolution": "Показать решение",
    "skip": "Пропустить",
    "submit": "Ответить",
    "tryAgain": "Ещё раз",
  },
  "errors": {
    "loadFailed": "Не удалось загрузить упражнение. Попробуйте ещё раз.",
    "noDrillsAvailable": "Для этого типа пока нет упражнений.",
    "submitFailed": "Не удалось отправить ответ. Проверьте соединение.",
  },
  "feedback": {
    "correct": "Верно!",
    "incorrect": "Неверно",
    "partiallyCorrect": "Почти — {{matched}} из {{total}} клеток",
    "solutionLabel": "Решение",
    "tryAgainHint": "Посмотрите на позицию ещё раз перед следующей попыткой.",
  },
  "lobby": {
    "completedBadge": "Решено",
    "lockedHint": "Решите предыдущий тип упражнения, чтобы открыть этот.",
    "newBadge": "Новое",
    "sprintCtaButton": "Начать спринт",
    "sprintCtaDescription": "Микс упражнений на время. Соревнуйтесь с собой и другими.",
    "sprintCtaTitle": "Спринт",
    "sprintLeaderboardCtaButton": "Открыть таблицу",
    "sprintLeaderboardCtaDescription": "Лучшие результаты спринта.",
    "sprintLeaderboardCtaTitle": "Таблица лидеров",
  },
  "side": {
    "blackAttackers": "Атакующие — чёрные",
    "blackDefenders": "Защищающие — чёрные",
    "blackToMove": "Ход чёрных",
    "whiteAttackers": "Атакующие — белые",
    "whiteDefenders": "Защищающие — белые",
    "whiteToMove": "Ход белых",
  },
}
`;

exports[`drills i18n — render snapshots > ru: snapshot drills.explanation + chess.pieces 1`] = `
{
  "chessPieces": {
    "b": "слон",
    "k": "король",
    "n": "конь",
    "p": "пешка",
    "q": "ферзь",
    "r": "ладья",
  },
  "explanation": {
    "common": {
      "correctAnswer": "Правильный ответ: {{answer}}",
      "next": "Дальше",
      "title": "Разбор",
      "yourAnswer": "Ваш ответ: {{answer}}",
    },
    "countAttackers": {
      "correct_few": "{{count}} фигуры атакуют клетку {{square}}.",
      "correct_many": "{{count}} фигур атакуют клетку {{square}}.",
      "correct_one": "{{count}} фигура атакует клетку {{square}}.",
      "correct_other": "{{count}} фигур атакуют клетку {{square}}.",
      "list": "Атакующие: {{pieces}}.",
      "userAnswer": "Ваш ответ: {{userCount}}.",
    },
    "countDefenders": {
      "correct_few": "{{count}} фигуры защищают клетку {{square}}.",
      "correct_many": "{{count}} фигур защищают клетку {{square}}.",
      "correct_one": "{{count}} фигура защищает клетку {{square}}.",
      "correct_other": "{{count}} фигур защищают клетку {{square}}.",
      "list": "Защищающие: {{pieces}}.",
      "userAnswer": "Ваш ответ: {{userCount}}.",
    },
    "findAllChecks": {
      "correct_few": "{{count}} хода дают шах: {{moves}}.",
      "correct_many": "{{count}} ходов дают шах: {{moves}}.",
      "correct_one": "{{count}} ход даёт шах: {{moves}}.",
      "correct_other": "{{count}} ходов дают шах: {{moves}}.",
      "missed": "Пропустили: {{moves}}.",
      "summaryGroup": "Прямые: {{direct}}; вскрытые: {{discovered}}; двойные: {{double}}.",
      "tagDirect": "{{from}}{{to}} — прямой шах.",
      "tagDiscovered": "{{from}}{{to}} — вскрытый шах.",
      "tagDouble": "{{from}}{{to}} — двойной шах.",
      "wrong": "{{moves}} — не шах.",
    },
    "findFork": {
      "correct": "{{piece}} ходом {{move}} ставит вилку на {{targets}}.",
      "correctWithCheck": "{{piece}} ходом {{move}} ставит вилку с шахом: {{king}} и {{targets}}.",
      "wrong": "{{from}}{{to}} не создаёт вилку.",
    },
    "findHangingPiece": {
      "correct": "{{piece}} на {{square}} висит: атакуют {{attackers}}, защищают {{defenders}}.",
      "correctUndefended": "{{piece}} на {{square}} висит: атакует {{attackers}}, защитников нет.",
      "wrong": "Ваш ход {{from}}{{to}} не берёт зависшую фигуру.",
    },
    "findLoosePiece": {
      "correct": "{{piece}} на {{square}} не защищена ни одной своей фигурой.",
      "wrong": "Фигура на {{square}} защищена: {{defenders}}.",
    },
    "findPin": {
      "correctAbsolute": "{{attacker}} ({{fromSquare}}) даёт абсолютную связку: {{pinned}} ({{pinnedSquare}}) не может уйти, за ней король.",
      "correctRelative": "{{attacker}} ({{fromSquare}}) связывает {{pinned}} ({{pinnedSquare}}) с более ценной {{anchor}} ({{anchorSquare}}).",
      "wrong": "{{square}} не связана.",
    },
    "findUndefendedAttack": {
      "correct": "{{move}}: атака на {{piece}} ({{square}}), защитников нет.",
      "correctFreeWin": "{{move}}: выигрывает {{piece}} ({{square}}) без размена.",
      "correctMulti": "{{move}}: новых висящих фигур — {{count}} ({{squares}}).",
      "wrong": "{{from}}{{to}} не создаёт новой угрозы.",
    },
  },
}
`;
